--- a/src/Rentler.Admin.Web/src/app/app-header/header/header.component.html
+++ b/src/Rentler.Admin.Web/src/app/app-header/header/header.component.html
@@ -1,3 +1,15 @@
-<p>
-  header works!
-</p>
+﻿<nav class="docs-navbar">
+  <a _ngcontent-c1="" aria-label="Angular Material" class="docs-button mat-button" md-button="" routerlink="/" aria-disabled="false" tabindex="0" href="/">
+    <span class="mat-button-wrapper">
+      <span _ngcontent-c1="">Rentler Admin</span>
+    </span>
+    <div class="mat-button-ripple mat-ripple" md-ripple=""></div><div class="mat-button-focus-overlay"></div>
+  </a>
+  <div _ngcontent-c1="" class="flex-spacer"></div>
+  <a _ngcontent-c1="" aria-label="Angular Material" class="docs-button mat-button" md-button="" routerlink="/" aria-disabled="false" tabindex="0" href="/">
+    <span class="mat-button-wrapper">
+      <span _ngcontent-c1="">User email here</span>
+    </span>
+    <div class="mat-button-ripple mat-ripple" md-ripple=""></div><div class="mat-button-focus-overlay"></div>
+  </a>
+</nav>
