--- a/src/Rentler.Admin.Web/src/app/app.component.html
+++ b/src/Rentler.Admin.Web/src/app/app.component.html
@@ -1,9 +1,6 @@
-﻿
-<h1>ADDEDfsdf</h1>
-<ul *ngFor="let value of apiValues">
-  <li>{{value}}</li>
-</ul>
-<button md-raised-button color="warn">Warn button</button>
-<button md-raised-button color="accent">Accent button</button>
-<button md-raised-button color="primary">Primary button</button>
+﻿<app-header class="mat-elevation-z6"></app-header>
+<app-sidenav></app-sidenav>
+
+
+
 
