UI Fixed component and modules added,css manipulation

--- a/src/Rentler.Admin.Web/src/app/app-footer/footer/footer.component.html
+++ b/src/Rentler.Admin.Web/src/app/app-footer/footer/footer.component.html
@@ -1,3 +1,7 @@
-﻿<p>
-  footer works!
-</p>
+﻿<footer class="docs-footer">
+  <div class="docs-footer-list">
+    <div _ngcontent-c12="" class="footer-logo">
+      <img _ngcontent-c12="" alt="angular" class="docs-footer-angular-logo" src="../../../assets/img/homepage/angular-white-transparent.svg">
+    </div>
+  </div>
+</footer>
