--- a/src/Rentler.Admin.Web/src/app/app-header/header/header.component.html
+++ b/src/Rentler.Admin.Web/src/app/app-header/header/header.component.html
@@ -13,3 +13,4 @@
     <div class="mat-button-ripple mat-ripple" md-ripple=""></div><div class="mat-button-focus-overlay"></div>
   </a>
 </nav>
+<!--<router-outlet></router-outlet>!-->
