--- a/src/Rentler.Admin.Web/src/app/app-sidenav/sidenav/sidenav.component.css
+++ b/src/Rentler.Admin.Web/src/app/app-sidenav/sidenav/sidenav.component.css
@@ -1,93 +1,13 @@
-﻿.mat-sidenav-container {
-  background-color: rgb(250, 250, 250);
-  color: rgba(0, 0, 0, 0.87);
-}
-.mat-sidenav-container {
-  position: relative;
-  transform: translate3d(0,0,0);
-  box-sizing: border-box;
-  -webkit-overflow-scrolling: touch;
-  display: block;
-  overflow: hidden;
-}
+﻿
 
 .docs-component-viewer-sidenav-container {
   width: 100%;
 }
 
-.mat-sidenav-transition .mat-sidenav-backdrop.mat-sidenav-shown {
-  transition: background-color .4s cubic-bezier(.25,.8,.25,1);
-}
-.mat-sidenav-backdrop.mat-sidenav-shown {
-  background-color: rgba(0, 0, 0, 0.6);
-}
 
-.mat-sidenav-backdrop.mat-sidenav-shown {
-  visibility: visible;
-}
-
-.mat-sidenav-backdrop {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  display: block;
-  z-index: 2;
-  visibility: hidden;
-}
-.mat-sidenav-container {
-  background-color: rgb(250, 250, 250);
-  color: rgba(0, 0, 0, 0.87);
-}
-.cdk-visually-hidden {
-  border: 0;
-  clip: rect(0 0 0 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  text-transform: none;
-  width: 1px;
-}
-
-.mat-sidenav-transition .mat-sidenav {
-  transition: transform .4s cubic-bezier(.25,.8,.25,1);
-}
-.mat-sidenav.mat-sidenav-side {
-  z-index: 1;
-}
-
-.mat-sidenav.mat-sidenav-opened, .mat-sidenav.mat-sidenav-opening {
-  transform: translate3d(0,0,0);
-}
 
 .docs-component-viewer-sidenav, .docs-component-viewer-sidenav.mat-sidenav-opened {
   box-shadow: 3px 0 6px rgba(0,0,0,.24);
-}
-
-.mat-sidenav {
-  background-color: white;
-  color: rgba(0, 0, 0, 0.87);
-}
-.mat-sidenav .mat-sidenav-closed {
-    visibility: hidden;
-  }
-.mat-sidenav {
-  position: relative;
-  transform: translate3d(0,0,0);
-  display: block;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  z-index: 3;
-  min-width: 5vw;
-  outline: 0;
-  box-sizing: border-box;
-  height: 100%;
-  overflow-y: auto;
-  transform: translate3d(-100%,0,0);
 }
 
 
@@ -98,7 +18,81 @@
   overflow: auto;
   height: 100%;
 }
-.mat-sidenav.mat-sidenav-closed {
-  visibility: hidden;
+
+/*SideNav*/
+  .docs-component-viewer-sidenav h3 {
+    border: none;
+    font-size: 10px;
+    letter-spacing: 1px;
+    line-height: 24px;
+    text-transform: uppercase;
+    font-weight: 400;
+    margin: 0;
+    padding: 0 16px;
+    height:20px;
+  }
+  .docs-component-viewer-sidenav h3 {
+    background: rgba(0,0,0,.32);
+    color: hsla(0,0%,100%,.87);
+  }
+
+  .docs-component-viewer-sidenav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  .docs-component-viewer-sidenav li {
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    margin: 0;
+    padding: 0;
+  }
+  .docs-component-viewer-sidenav li {
+    border-color: rgba(0,0,0,.06);
+    color: rgba(0,0,0,.54);
+  }
+  .docs-component-viewer-sidenav li > a {
+    box-sizing: border-box;
+    display: block;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 47px;
+    text-decoration: none;
+    transition: all .3s;
+    padding: 0 60px;
+    position: relative;
+  }
+  .docs-component-viewer-sidenav li > a {
+    color: rgba(0,0,0,.54);
+  }
+  .docs-component-viewer-sidenav li > a.docs-component-viewer-sidenav-item-selected {
+    font-weight: 600;
+  }
+  .docs-component-viewer-sidenav li>a:hover {
+    background-color: rgba(0,0,0,.04);
+    color: #3f51b5;
+  }
+md-icon {
+
+  position:absolute;
+  left:0;
+  right:0;
+  top:10px;
+  bottom:0;
+  padding:0 28px;
 }
+
+.docs-component-sidenav-content {
+  min-height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+
+
 
