--- a/src/Rentler.Admin.Web/src/app/app.component.css
+++ b/src/Rentler.Admin.Web/src/app/app.component.css
@@ -13,3 +13,8 @@
   flex-direction: column;
 }
 
+.fill-remaining-space {
+  /*This fills the remaining space, by using flexbox.  
+  Every toolbar row uses a flexbox row layout. */
+  flex: 1 1 auto;
+}
