--- a/src/Rentler.Admin.Web/src/app/app.component.html
+++ b/src/Rentler.Admin.Web/src/app/app.component.html
@@ -1,6 +1,30 @@
 ﻿<app-header class="mat-elevation-z6"></app-header>
-<app-sidenav></app-sidenav>
+<!--<app-sidenav></app-sidenav>!-->
+<router-outlet></router-outlet>
 
+<!--
+<md-toolbar color="primary">
+
+  <button md-button routerLink="/">
+    <md-icon>home</md-icon>
+    TEST
+  </button>
+
+  <span class="fill-remaining-space"></span>
+  <div fxLayout="row" fxShow="false" fxShow.gt-sm>
+    <button md-button routerLink="/products">Products</button>
+    <button md-button routerLink="/dashboard">Dashboard</button>
+  </div>
+  <button md-button [md-menu-trigger-for]="menu" fxHide="false" fxHide.gt-sm>
+    <md-icon>menu</md-icon>
+  </button>
+
+</md-toolbar>
+<md-menu x-position="before" #menu="mdMenu">
+  <button md-menu-item routerLink="/products">Products</button>
+  <button md-menu-item routerLink="/dashboard">Dashboard</button>
+</md-menu>
+    -->
 
 
 
