--- a/src/Rentler.Admin.Web/src/styles.css
+++ b/src/Rentler.Admin.Web/src/styles.css
@@ -1,4 +1,8 @@
 ﻿/* You can add global styles to this file, and also import other style files */
+body {
+  font-family: Roboto,Helvetica Neue Light,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
+  margin: 0;
+}
 app-root {
   position: absolute;
   top: 0;
@@ -36,6 +40,11 @@ app-sidenav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+app-component-viewer {
+  font-weight: 400;
+  margin: 20px 70px 50px 70px;
 }
 
 
