--- a/src/Rentler.Admin.Web/src/app/app-footer/footer/footer.component.html
+++ b/src/Rentler.Admin.Web/src/app/app-footer/footer/footer.component.html
@@ -1,7 +1,12 @@
 ﻿<footer class="docs-footer">
   <div class="docs-footer-list">
-    <div _ngcontent-c12="" class="footer-logo">
-      <img _ngcontent-c12="" alt="angular" class="docs-footer-angular-logo" src="../../../assets/img/homepage/angular-white-transparent.svg">
+    <div class="docs-footer-links">
+      <ul>
+        <li > <a href="https://wwww.angular.io">Learn Angular</a> </li>
+      </ul>
+    </div>
+    <div class="docs-footer-copyright">
+      <p>Powered by Google ©2010-2017. Code licensed under an MIT-style License. Documentation licensed under CC BY 4.0.</p>
     </div>
   </div>
 </footer>
