--- a/src/Rentler.Admin.Web/src/app/component-viewer/component-viewer/component-viewer.component.html
+++ b/src/Rentler.Admin.Web/src/app/component-viewer/component-viewer/component-viewer.component.html
@@ -1,3 +1,13 @@
-﻿<div class="docs-component-viewer-content">
+﻿<nav class="docs-component-viewer-tabbed-content mat-tab-nav-bar" md-tab-nav-bar>
+  <div class="mat-tab-links">
+    <!----><a class="docs-component-viewer-section-tab mat-tab-link" md-tab-link="" routerlinkactive="" href="/components/tabs/overview">Overview</a>
+    <a class="docs-component-viewer-section-tab mat-tab-link" md-tab-link="" routerlinkactive="" href="/components/tabs/api">API</a>
+    <a class="docs-component-viewer-section-tab mat-tab-link" md-tab-link="" routerlinkactive="" href="/components/tabs/examples">Examples</a>
+    
+  </div>
+
+</nav>
+
+<div class="docs-component-viewer-content">
   Component Viewr works
 </div>
