--- a/src/Rentler.Admin.Web/src/app/app-footer/footer/footer.component.css
+++ b/src/Rentler.Admin.Web/src/app/app-footer/footer/footer.component.css
@@ -4,7 +4,7 @@
   font-size: 12px;
 }
 .docs-footer {
-  background: #673ab7;
+  background: rgba(27, 27, 27, 0.85);
   color: rgba(255, 255, 255, 0.87);
 }
 
