--- a/src/Rentler.Admin.Web/src/app/app-footer/footer/footer.component.html
+++ b/src/Rentler.Admin.Web/src/app/app-footer/footer/footer.component.html
@@ -2,11 +2,11 @@
   <div class="docs-footer-list">
     <div class="docs-footer-links">
       <ul>
-        <li > <a href="https://wwww.angular.io">Learn Angular</a> </li>
+        <li > <a href="www.rentler.com">Rentler Admin</a> </li>
       </ul>
     </div>
     <div class="docs-footer-copyright">
-      <p>Powered by Google ©2010-2017. Code licensed under an MIT-style License. Documentation licensed under CC BY 4.0.</p>
+      <p>Powered by Rentler. Copyright 2017</p>
     </div>
   </div>
 </footer>
