UI Fixes and Page Addition

--- a/src/Rentler.Admin.Web/src/app/app-footer/footer/footer.component.html
+++ b/src/Rentler.Admin.Web/src/app/app-footer/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="docs-footer-list">
     <div class="docs-footer-links">
       <ul>
-        <li > <a href="www.rentler.com">Rentler Admin</a> </li>
+        <li><a href="https://rentler.com">Rentler Admin</a> </li>
       </ul>
     </div>
     <div class="docs-footer-copyright">
