--- a/src/Rentler.Admin.Web/src/app/component-header/component-header/component-header.component.html
+++ b/src/Rentler.Admin.Web/src/app/component-header/component-header/component-header.component.html
@@ -1,7 +1,7 @@
-﻿<div class="docs-primary-header component-page-header">
+﻿<!--<div class="docs-primary-header component-page-header">-->
   <!--<button md-button class="sidenav-toggle">
 
       <md-icon>menu</md-icon>
   </button>-->
   <h1>Dashboard </h1>
-</div>
+<!--</div>-->
