--- a/src/Rentler.Admin.Web/src/app/app-sidenav/sidenav/sidenav.component.css
+++ b/src/Rentler.Admin.Web/src/app/app-sidenav/sidenav/sidenav.component.css
@@ -94,6 +94,28 @@ md-icon {
   flex-direction: column;
 }
 
+/* Temporary Added*/
+.component-page-header{
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.docs-primary-header {
+  background: #3f3b46;
+  height: 65px;
+}
+
+.docs-primary-header {
+  padding-left: 20px;
+}
+
+/*END*/
+
+
 
 
 
