--- a/src/Rentler.Admin.Web/src/app/app-sidenav/sidenav/sidenav.component.html
+++ b/src/Rentler.Admin.Web/src/app/app-sidenav/sidenav/sidenav.component.html
@@ -16,7 +16,7 @@
               [opened]="isOpen" class="docs-component-viewer-sidenav">
     <ng-content select="[sidenav-content]"></ng-content>
     <nav>
-      <h3></h3>
+      <!--<h3></h3>-->
       <ul>
         <li>
             <a [routerLink]="['/admin/home/dashboard']" routerLinkActive="docs-component-viewer-sidenav-item-selected" >
@@ -27,85 +27,136 @@
       <ul>
         <li>
           <a [routerLink]="['/admin/home/subscription']" routerLinkActive="docs-component-viewer-sidenav-item-selected">
-            <span><md-icon class="mt-icn">account_box</md-icon></span>Subscription
+            <span><md-icon class="mt-icn">group</md-icon></span>Subscription
           </a>
         </li>
       </ul>
       <ul>
         <li>
-          <a  routerLinkActive="docs-component-viewer-sidenav-item-selected">
-            <span><md-icon class="mt-icn">account_box</md-icon></span>Users
-          </a>
+            <a [routerLink]="" [mdMenuTriggerFor]="menu">
+              <span><md-icon class="mt-icn">account_box</md-icon></span>Users
+            </a>
+            <md-menu #menu="mdMenu" xPosition="after" [overlapTrigger]="false">
+               <a [routerLink]="['/admin/home/user']" md-menu-item ><md-icon>list</md-icon><span>All Users</span></a>
+               <a [routerLink]="['/admin/home/scammer']" md-menu-item ><md-icon>not_interested</md-icon><span>Watch List</span></a>
+               <a [routerLink]="['/admin/home/role']" md-menu-item ><md-icon>remove_red_eye</md-icon><span>Roles</span></a>
+            </md-menu>
+         
         </li>
       </ul>
      
       <ul>
         <li>
           <a [routerLink]="['/admin/home/applications']" routerLinkActive="docs-component-viewer-sidenav-item-selected">
-            <span><md-icon class="mt-icn">account_box</md-icon></span>Applications
+            <span><md-icon class="mt-icn">folder_shared</md-icon></span>Applications
           </a>
         </li>
       </ul>
       <ul>
         <li>
           <a [routerLink]="['/admin/home/community']" routerLinkActive="docs-component-viewer-sidenav-item-selected">
-            <span><md-icon class="mt-icn">account_box</md-icon></span>Communities
+            <span><md-icon class="mt-icn">account_balance</md-icon></span>Communities
           </a>
         </li>
       </ul>
       <ul>
         <li>
-          <a  routerLinkActive="docs-component-viewer-sidenav-item-selected">
-            <span><md-icon class="mt-icn">account_box</md-icon></span>Buildings
+
+          <a [routerLink]="" [mdMenuTriggerFor]="menubuilding">
+            <span><md-icon class="mt-icn">account_balance</md-icon></span>Buildings
           </a>
+          <md-menu #menubuilding="mdMenu" xPosition="after" [overlapTrigger]="false">
+            <a [routerLink]="['/admin/home/building']" md-menu-item ><md-icon>list</md-icon><span>All Buildings</span></a>
+            <a [routerLink]="['/admin/home/reported']" md-menu-item ><md-icon>flag</md-icon><span>Reported</span></a>
+            <a [routerLink]="['/admin/home/premier']" md-menu-item ><md-icon>redeem</md-icon><span>Premier</span></a>
+            <a [routerLink]="['/admin/home/nonupgraded']" md-menu-item ><md-icon>flag</md-icon><span>Non Upgraded apt.</span></a>
+
+          </md-menu>
+
         </li>
       </ul>
       <ul>
         <li>
-          <a  routerLinkActive="docs-component-viewer-sidenav-item-selected">
-            <span><md-icon class="mt-icn">account_box</md-icon></span>Forms
+          <a [routerLink]="" [mdMenuTriggerFor]="menuforms">
+            <span><md-icon class="mt-icn">insert_drive_file</md-icon></span>Forms
           </a>
+          <md-menu #menuforms="mdMenu" xPosition="after" [overlapTrigger]="false">
+            <a [routerLink]="['/admin/home/form/category']" md-menu-item ><md-icon>folder_open</md-icon><span>Categories</span></a>
+            <a [routerLink]="['/admin/home/form']" md-menu-item ><md-icon>assignment</md-icon><span>Providers</span></a>
+            
+          </md-menu>
+
         </li>
       </ul>
       <ul>
         <li>
           <a [routerLink]="['/admin/home/screening']" routerLinkActive="docs-component-viewer-sidenav-item-selected">
-            <span><md-icon class="mt-icn">account_box</md-icon></span>Credit / Background
+            <span><md-icon class="mt-icn">card_membership</md-icon></span>Credit / Background
           </a>
         </li>
       </ul>
       <ul>
         <li>
           <a [routerLink]="['/admin/home/idverify']" routerLinkActive="docs-component-viewer-sidenav-item-selected">
-            <span><md-icon class="mt-icn">account_box</md-icon></span>ID Verify
+            <span><md-icon class="mt-icn">perm_identity</md-icon></span>ID Verify
           </a>
         </li>
       </ul>
       <ul>
         <li>
-          <a  routerLinkActive="docs-component-viewer-sidenav-item-selected">
-            <span><md-icon class="mt-icn">account_box</md-icon></span>Payments
+
+
+          <a [routerLink]="" [mdMenuTriggerFor]="menupayments">
+            <span><md-icon class="mt-icn">attach_money</md-icon></span>Payments
           </a>
+          <md-menu #menupayments="mdMenu" yPosition="below" [overlapTrigger]="false">
+            <a [routerLink]="['/admin/home/paymentinvites']" md-menu-item><md-icon>credit_card</md-icon><span>Payment Invites</span></a>
+            <a [routerLink]="['/admin/home/payments']" md-menu-item><md-icon>perm_contact_calendar</md-icon><span>Recurring Payments</span></a>
+            <a [routerLink]="['/admin/home/bankaccounts']" md-menu-item><md-icon>monetization_on</md-icon><span>Bank Accounts</span></a>
+            <a [routerLink]="['/admin/home/paymentseries']" md-menu-item><md-icon>monetization_on</md-icon><span>Payment Series</span></a>
+            <a [routerLink]="['/admin/home/transactions']" md-menu-item><md-icon>monetization_on</md-icon><span>Transactions</span></a>
+            <a [routerLink]="['/admin/home/legalentities']" md-menu-item><md-icon>monetization_on</md-icon><span>Legal Entities</span></a>
+            <a [routerLink]="['/admin/home/merchantaccounts']" md-menu-item><md-icon>monetization_on</md-icon><span>Merchant Accounts</span></a>
+            <a [routerLink]="['/admin/home/paymentcaps']" md-menu-item><md-icon>monetization_on</md-icon><span>Payment Caps</span></a>
+          </md-menu>
+
         </li>
       </ul>
       <ul>
         <li>
-          <a  routerLinkActive="docs-component-viewer-sidenav-item-selected">
-            <span><md-icon class="mt-icn">account_box</md-icon></span>Sales
+          <a  [routerLink]="" [mdMenuTriggerFor]="menusales">
+            <span><md-icon class="mt-icn">add_shopping_cart</md-icon></span>Sales
           </a>
+          <md-menu #menusales="mdMenu" yPosition="below" [overlapTrigger]="false">
+            <a [routerLink]="['/admin/home/order']" md-menu-item><md-icon>shopping_cart</md-icon><span>Orders</span></a>
+            <a [routerLink]="['/admin/home/promo']" md-menu-item><md-icon>line_weight</md-icon><span>Promo Codes</span></a>
+          </md-menu>
         </li>
       </ul>
       <ul>
         <li>
-          <a  routerLinkActive="docs-component-viewer-sidenav-item-selected">
-            <span><md-icon class="mt-icn">account_box</md-icon></span>Content
+          <a [routerLink]="" [mdMenuTriggerFor]="menucontent">
+            <span><md-icon class="mt-icn">font_download</md-icon></span>Content
           </a>
+          <md-menu #menucontent="mdMenu" yPosition="below" [overlapTrigger]="false">
+            <a [routerLink]="['/admin/home/page']" md-menu-item><md-icon>insert_drive_file</md-icon><span>Pages</span></a>
+            <a [routerLink]="['/admin/home/blog']" md-menu-item><md-icon>comment</md-icon><span>Blogs</span></a>
+          </md-menu>
         </li>
       </ul>
       <ul>
         <li>
-          <a  routerLinkActive="docs-component-viewer-sidenav-item-selected">
-            <span><md-icon class="mt-icn">account_box</md-icon></span>Cleanup
+          <a [routerLink]="" [mdMenuTriggerFor]="menucleanup">
+            <span><md-icon class="mt-icn">add_alert</md-icon></span>Cleanup
+          </a>
+          <md-menu #menucleanup="mdMenu" yPosition="below" [overlapTrigger]="false">
+            <a [routerLink]="['/admin/home/cleanup/community']" md-menu-item><md-icon>people</md-icon><span>Communities</span></a>
+          
+          </md-menu>
+        </li>
+        <li>
+          <a [routerLink]="['/login']">
+            <span><md-icon class="mt-icn">account_circle</md-icon></span>Login
           </a>
         </li>
       </ul>
