--- a/src/Rentler.Admin.Web/src/styles.css
+++ b/src/Rentler.Admin.Web/src/styles.css
@@ -52,5 +52,30 @@ app-footer .docs-footer-links a {
 }
 
 
+.mat-sidenav::-webkit-scrollbar, .mat-sidenav-content::-webkit-scrollbar, .mat-menu-panel::-webkit-scrollbar {
+  width: 6px;
+  background-color: #F5F5F5;
+}
+
+.mat-sidenav::-webkit-scrollbar-thumb, .mat-sidenav-content::-webkit-scrollbar-thumb, .mat-menu-panel::-webkit-scrollbar-thumb {
+  background-color: #6e6e6e;
+  outline: 1px solid #333;
+  border-radius: 1px;
+}
+
+.mat-sidenav::-webkit-scrollbar-track, .mat-sidenav-content::-webkit-scrollbar-track, .mat-menu-panel::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  background-color: #F5F5F5;
+}
+.mat-menu-panel{
+  margin-left:30px;
+}
+
+
+
+
+
+
+
 
 
