Set up token service, AuthGuard service and Toast Service

--- a/src/Rentler.Admin.Web/src/app/app-header/header/header.component.html
+++ b/src/Rentler.Admin.Web/src/app/app-header/header/header.component.html
@@ -1,4 +1,5 @@
-﻿<nav class="docs-navbar">
+﻿
+<nav class="docs-navbar">
   <a _ngcontent-c1="" aria-label="Angular Material" class="docs-button mat-button" md-button="" routerlink="/" aria-disabled="false" tabindex="0" href="/">
     <span class="mat-button-wrapper">
       <span _ngcontent-c1="">Rentler Admin</span>
