--- a/src/Rentler.Admin.Web/src/app/app.component.html
+++ b/src/Rentler.Admin.Web/src/app/app.component.html
@@ -1,4 +1,5 @@
-﻿<app-header class="mat-elevation-z6"></app-header>
+﻿<ng2-toasty></ng2-toasty>
+<app-header class="mat-elevation-z6"></app-header>
 <router-outlet></router-outlet>
 
 
