added mddatatable,fixed issue in state url,fixed ui issues

--- a/src/Rentler.Admin.Web/src/styles.css
+++ b/src/Rentler.Admin.Web/src/styles.css
@@ -28,8 +28,7 @@ app-header {
 }
 
 app-header .docs-navbar {
-  background: #c70808;
-
+  background: #ED2226 !important;
 }
 
 app-root > app-sidenav {
