--- a/src/Rentler.Admin.Web/src/app/app_component/app-login/app-login.component.html
+++ b/src/Rentler.Admin.Web/src/app/app_component/app-login/app-login.component.html
@@ -1,11 +1,10 @@
 ﻿
-
     <div fxLayout="row" fxLayoutAlign="space-around none">
           <div class="wrapper-container">
             <h1 class="md-headline">Login in your account in </h1>
             <div>
               <button md-raised-button color="warn" class="login-submit" (click)="login()">Auth Server</button>
-              <button md-raised-button color="warn" class="login-submit" (click)="showSuccess()">Show</button>
+              <!--<button md-raised-button color="warn" class="login-submit" (click)="showSuccess()">Show</button>-->
             </div>
           </div>
       </div>
