Fixed the expiredToken Issue, removed unnecessary codes

--- a/src/Rentler.Admin.Web/src/app/component-viewer/dashboard/dashboard.component.css
+++ b/src/Rentler.Admin.Web/src/app/component-viewer/dashboard/dashboard.component.css
@@ -1,6 +1,9 @@
 ﻿.mat-header-row, .mat-row {
   border-bottom-style:hidden;
-  border-top:1px solid rgba(0,0,0,.25);
+
+}
+.mat-row {
+  border-top: 1px solid rgba(0,0,0,.25);
 }
 .mat-header-cell {
   color: rgba(0,0,0,.54);
