added Custom HttpService, added progress bar upon request

--- a/src/Rentler.Admin.Web/src/app/app-header/header/header.component.html
+++ b/src/Rentler.Admin.Web/src/app/app-header/header/header.component.html
@@ -1,4 +1,4 @@
-﻿
+﻿<app-loader></app-loader>
 <nav class="docs-navbar">
   <a _ngcontent-c1="" aria-label="Angular Material" class="docs-button mat-button" md-button="" routerlink="/" aria-disabled="false" tabindex="0" href="/">
     <span class="mat-button-wrapper">
@@ -28,9 +28,8 @@
     </span>
     <div class="mat-button-ripple mat-ripple" md-ripple=""></div><div class="mat-button-focus-overlay"></div>
   </a>-->
+  <button md-button color="accent" (click)="startProgress()">Start Progress</button>
 
-  <p>{{mode}}</p>
-  <p>{{color}}</p>
 </nav>
-<md-progress-bar *ngIf="isProgressstart" [mode]="mode" [color]="color"></md-progress-bar>
+
 <!--<router-outlet></router-outlet>!-->
