--- a/src/Rentler.Admin.Web/src/app/component-viewer/component-viewer/component-viewer.component.html
+++ b/src/Rentler.Admin.Web/src/app/component-viewer/component-viewer/component-viewer.component.html
@@ -7,7 +7,7 @@
   </div>
 
 </nav>!-->
-
+<app-loader></app-loader>
 <div class="docs-component-viewer-content">
   <router-outlet></router-outlet>
 
